tests/snapshots/file@call@bool.lox.snap
---
source: tests/common/mod.rs
description: "true(); // expect runtime error: Can only call functions and classes.\n"
input_file: crafting_interpreters_test_files/call/bool.lox
---
OUT: 

===
ERR: 
  × can only call functions and classes
   ╭────
 1 │ true(); // expect runtime error: Can only call functions and classes.
   ·     ┬
   ·     ╰── here
   ╰────
